site en maintenance

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <h1>Jocelyn Appia</h1>
     <p><strong>CHARGÉ DE PROJET DATA RH</strong></p>
+    <p><strong>SITE EN MAINTENANCE </strong></p>
   </header>
 
   <section id="about">
