--- a/CV_portfolio.html
+++ b/CV_portfolio.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Mon CV</h1>
 
-  <img src="CV_Jocelyn_APPIA_transformationdigi30012025_page-0001.jpg" alt="CV de Jocelyn Appia" />
+  <img src="CV_DATA ANALYST_RH_JOCELYNUP_page-0001.jpg" alt="CV de Jocelyn Appia" />
 
 
   <div class="download-container">
